[gd_scene load_steps=9 format=3 uid="uid://3kjk4w0wer4"]

[ext_resource type="PackedScene" uid="uid://dwa2t136eppp" path="res://player/BaseCharacter/BaseCharacter.glb" id="1_7qjkn"]
[ext_resource type="Script" path="res://player/BaseCharacter/Scene/base_character.gd" id="2_8d4a4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f5v2i"]
radius = 0.38

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0lhfk"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rwb6n"]
animation = &"Walking"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_24idx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_0lhfk")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_rwb6n")
blend_point_1/pos = 1.0
min_space = 0.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_qjth7"]
nodes/BlendSpace1D/node = SubResource("AnimationNodeBlendSpace1D_24idx")
nodes/BlendSpace1D/position = Vector2(120, 240)
nodes/output/position = Vector2(460, 160)
node_connections = [&"output", 0, &"BlendSpace1D"]

[sub_resource type="SphereShape3D" id="SphereShape3D_q3a5t"]

[node name="BaseCharacter" instance=ExtResource("1_7qjkn")]
collision_layer = 2
collision_mask = 3
script = ExtResource("2_8d4a4")

[node name="Skeleton3D" parent="Armature" index="1"]
bones/0/position = Vector3(3.43009e-10, 0.650778, -4.69154e-09)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(-0.101219, -0.000264807, 0.0135792, 0.994771)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(0.083879, 0.000415142, -0.0112401, 0.996412)
bones/2/scale = Vector3(1, 1, 1)
bones/3/position = Vector3(0.0587374, 0.188903, 0.000802286)
bones/3/rotation = Quaternion(-0.019321, -0.015143, -0.81184, 0.583364)
bones/4/rotation = Quaternion(-0.0362898, 0.0128226, -0.332907, 0.942174)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(0.0712842, 0.000848591, -0.223144, 0.972175)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.198948, -0.0290447, 0.00706617, 0.979554)
bones/7/rotation = Quaternion(0.0639171, 0.0194365, -0.144877, 0.987192)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.0857773, 0.0187153, -0.179476, 0.979837)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(-0.0936894, 0.0226847, 0.0141097, 0.995243)
bones/10/rotation = Quaternion(0.0419097, 0.0304843, -0.0888326, 0.994697)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(0.10345, -0.0148142, -0.308603, 0.945433)
bones/12/rotation = Quaternion(-0.00534418, 0.000375837, 0.0296276, 0.999547)
bones/13/rotation = Quaternion(0.00739821, 0.00775215, -0.150644, 0.98853)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(-0.00985046, 0.0139382, -0.253063, 0.967299)
bones/15/rotation = Quaternion(0.112314, -0.00010383, 0.0135002, 0.993581)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(-0.0975945, 0.000883558, -0.0340599, 0.994643)
bones/17/rotation = Quaternion(0.0803981, -0.011344, -0.330717, 0.940231)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.310948, -0.0143828, 0.102768, 0.944745)
bones/19/rotation = Quaternion(0.0179618, 0.00278789, -0.0561577, 0.998256)
bones/20/rotation = Quaternion(-0.00990388, 0.014878, -0.0363639, 0.999179)
bones/20/scale = Vector3(1, 1, 1)
bones/21/position = Vector3(-0.0585184, 0.188167, 0.000836957)
bones/21/rotation = Quaternion(-0.0182495, 0.0158598, 0.815482, 0.578278)
bones/22/rotation = Quaternion(-0.0360134, -0.0135793, 0.352553, 0.935)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(0.071137, -0.000881364, 0.231761, 0.970168)
bones/23/scale = Vector3(1, 1, 1)
bones/25/rotation = Quaternion(0.0600533, 0.00776482, 0.0722813, 0.995544)
bones/26/rotation = Quaternion(0.0750214, 0.0223695, -0.0675713, 0.994638)
bones/26/scale = Vector3(1, 1, 1)
bones/28/rotation = Quaternion(0.02616, -0.0172562, 0.0136693, 0.999415)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(0.0525699, 0.029329, 0.0683638, 0.995843)
bones/30/rotation = Quaternion(-0.00534417, -0.000375834, -0.0296276, 0.999547)
bones/31/rotation = Quaternion(-0.00408091, -0.00538477, 0.0739522, 0.997239)
bones/31/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(-0.0577257, -0.00209445, 0.00880429, 0.998291)
bones/33/rotation = Quaternion(0.112314, 0.000103846, -0.0135002, 0.993581)
bones/33/scale = Vector3(1, 1, 1)
bones/34/rotation = Quaternion(-0.108689, -0.00953641, -0.0427158, 0.993112)
bones/35/rotation = Quaternion(0.0350156, -0.011413, 0.0910092, 0.995169)
bones/35/scale = Vector3(1, 1, 1)
bones/36/rotation = Quaternion(0.310948, 0.0143828, -0.102768, 0.944745)
bones/37/rotation = Quaternion(0.0179618, -0.00278787, 0.0561577, 0.998256)
bones/38/rotation = Quaternion(-0.00990392, -0.014878, 0.0363639, 0.999179)
bones/39/rotation = Quaternion(-0.0235304, 5.09533e-08, 0.00314317, 0.999718)
bones/39/scale = Vector3(1, 1, 1)
bones/40/rotation = Quaternion(1.88448e-14, 7.27596e-12, 1.28694e-10, 1)
bones/41/rotation = Quaternion(0.884629, 5.23129e-10, -0.000130766, 0.466296)
bones/41/scale = Vector3(1, 1, 1)
bones/42/rotation = Quaternion(0.748984, 5.3239e-10, -0.000110715, 0.662589)
bones/44/rotation = Quaternion(0.0088872, 0.185958, 0.980828, -0.0575897)
bones/45/rotation = Quaternion(-0.381586, 0.00281618, -0.0466821, 0.92315)
bones/45/scale = Vector3(1, 1, 1)
bones/46/rotation = Quaternion(0.774724, 0.0158446, -0.00541271, 0.632078)
bones/47/rotation = Quaternion(-0.0100371, 0.1859, 0.981406, 0.0467128)
bones/47/scale = Vector3(1, 1, 0.999998)
bones/48/rotation = Quaternion(-0.381585, -0.00281633, 0.0466815, 0.92315)
bones/48/scale = Vector3(1, 1, 1)
bones/49/rotation = Quaternion(0.774724, -0.0158439, 0.00541281, 0.632078)
bones/49/scale = Vector3(1, 1, 1)
bones/51/rotation = Quaternion(-0.707107, 0, 0, 0.707107)
bones/53/rotation = Quaternion(-0.707107, 0, 0, 0.707107)

[node name="Hair2" parent="Armature/Skeleton3D" index="4"]
visible = false

[node name="Hair3" parent="Armature/Skeleton3D" index="5"]
visible = false

[node name="Hair4" parent="Armature/Skeleton3D" index="6"]
visible = false

[node name="Hair5" parent="Armature/Skeleton3D" index="7"]
visible = false

[node name="Hair6" parent="Armature/Skeleton3D" index="8"]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
shape = SubResource("CapsuleShape3D_f5v2i")

[node name="SpringArmPivot" type="Node3D" parent="." index="3"]
visible = false

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot" index="0"]
collision_mask = 128
spring_length = 10.0

[node name="MainCamera" type="Camera3D" parent="SpringArmPivot/SpringArm3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.37829, 0)
cull_mask = 1047551
v_offset = 20.0

[node name="AnimationTree" type="AnimationTree" parent="." index="4"]
tree_root = SubResource("AnimationNodeBlendTree_qjth7")
anim_player = NodePath("../AnimationPlayer")
parameters/BlendSpace1D/blend_position = 0.0

[node name="Direction" type="Marker3D" parent="." index="5"]

[node name="ActionableFinder" type="Area3D" parent="Direction" index="0"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Direction/ActionableFinder" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.230567, -0.56815)
shape = SubResource("SphereShape3D_q3a5t")
